Scrollbar fix

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -131,7 +131,6 @@ body {
       display: none;
     }
     .question {
-      overflow: hidden;
       -ms-overflow-style: none; /* IE and Edge */
       scrollbar-width: none; /* Firefox */
       &:-webkit-scrollbar {
@@ -242,7 +241,6 @@ body {
         // display: grid;
         // grid-template-columns: 1fr 3fr;
         // grid-template-rows: 1fr;
-        overflow: scroll;
         -ms-overflow-style: none; /* IE and Edge */
         scrollbar-width: none; /* Firefox */
         &:-webkit-scrollbar {
@@ -254,7 +252,11 @@ body {
           grid-template-rows: 1fr 1fr 1fr;
           opacity: 1;
           overflow: scroll;
-
+          -ms-overflow-style: none; /* IE and Edge */
+          scrollbar-width: none; /* Firefox */
+          &:-webkit-scrollbar {
+            display: none;
+          }
           .project {
             display: grid;
             padding: 50px 0;
